# llm-battle-ground

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
llm_battle_ground/: __init__.py  completion_provider.py  constants.py  types.py  utils.py
llm_battle_ground/datasets/: leetcode_demo.csv  leetcode_full.csv
llm_battle_ground/helpers/: __init__.py  leet_code_processor.py  similarity_experiment_runner.py  similarity_response_evaluator.py
llm_battle_ground/models/: __init__.py  model.py
llm_battle_ground/notebooks/: measure_pass_rate.ipynb  study-generated-similarity.ipynb
llm_battle_ground/results/: leetcode_evaluation__provider_eq_openai__vanilla_zero_shot__filter_ez_eq_0.25_filter_med_eq_0.5_filter_hrd_eq_1.0__model_eq_gpt_4_0613__temperature_eq_0.7__n_pass_1.jsonl  leetcode_similarity__num_input_eq_10__num_output_eq_5__step_size_eq_50__model_eq_gpt-4-0613__temperature_eq_0.7.jsonl  leetcode_similarity__step_size_eq_20__num_input_examples_eq_20__num_output_examples_eq_20__model_eq_gpt_3.5_turbo_0613__temperature_eq_0.7__n_pass_1.jsonl  leetcode_similarity_step_size_eq_20__num_input_examples_eq_20__num_output_examples_eq_20__model_eq_gpt_4_0613__temperature_eq_0.7__n_pass_1.jsonl  leetcode_vanilla-zero-shot__filter_ez_eq_0.25_filter_med_eq_0.5_filter_hrd_eq_1.0__model_eq_gpt-3.5-turbo-0613__temperature_eq_0.7__n_pass_1.jsonl  leetcode_vanilla-zero-shot__filter_ez_eq_0.25_filter_med_eq_0.5_filter_hrd_eq_1.0__model_eq_gpt-4-0613__temperature_eq_0.7__n_pass_1.jsonl
llm_battle_ground/scripts/: __init__.py  commands_ran.md  run_clean_data.py  (+9 more)
(+2 files in other folders)
